tests/snapshots/parse_failure__empty_input.snap
---
source: tests/parse_failure.rs
expression: "format_output_snapshot(json, &annotated)"
---
case --- 

stdout --- 
<empty>
stderr --- 
error: expected json value, found no significant characters
 --> stdin:1:1
  |
1 |
  | ^
  |
help: insert a placeholder value
  |
1 |  "rust is a must"
  |
